--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Lea Verou's résumé</title>
     <meta name="viewport" content="width=device-width"/>
-    <link href="./cv.css?2" rel="stylesheet"/>
+    <link href="assets/css/style.css" rel="stylesheet">
     <link rel="shortcut icon" href="https://lea.verou.me/logo.svg"/>
     <script>
     document.documentElement.classList.remove("no-js")
