Update index.html main links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Lea Verou's résumé</title>
+    <title>Katie Caruso's CV</title>
     <meta name="viewport" content="width=device-width"/>
     <link href="assets/css/style.css" rel="stylesheet">
     <link rel="shortcut icon" href="https://lea.verou.me/logo.svg"/>
@@ -14,24 +14,11 @@
 <body>
 
     <header>
-        <h1>Lea Verou</h1>
+        <h1>Katie Caruso</h1>
         <ul id="main_links">
-            <li>
-                <img src="icons/wikipedia.svg" alt="Wikipedia" title="Wikipedia" class="icon">
-                <a href="http://en.wikipedia.org/wiki/Lea_Verou">Wikipedia: Lea_Verou</a>
-            </li>
-            <li>
-                <img src="icons/link.svg" alt="Website" title="Personal Website" class="icon">
-                <a href="http://lea.verou.me">lea.verou.me</a>
-            </li>
-            <li>
-                <img src="icons/twitter.svg" alt="Twitter" title="Twitter" class="icon">
-                <a href="http://twitter.com/leaverou">@LeaVerou</a>
-            </li>
-            <li>
-                <img src="icons/github.svg" alt="Github" title="GitHub" class="icon">
-                <a href="https://github.com/leaverou">leaverou</a>
-            </li>
+            <li><a href="mailto:caruso.k.e@gmail.com" class="contact"><span class="material-symbols-outlined" style="font-size: 0.73em;">mail</span></a></li>
+            <li><a href="https://github.com/kathryncaruso" class="github"><i class="bx bxl-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/carusokatie/" class="linkedin"><i class="bx bxl-linkedin"></i></a></li>
         </ul>
     </header>
 
