--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </script>
 
     <!-- Vendor CSS Files -->
+        <link href="assets/vendor/aos/aos.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,100,0,-25" rel="stylesheet">
         <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -30,7 +31,7 @@
             <li><a href="mailto:caruso.k.e@gmail.com" class="contact"><span class="material-symbols-outlined" style="font-size: 0.73em;">mail</span></a><a href="mailto:caruso.k.e@gmail.com">caruso.k.e@gmail.com</a></li>
             <li><a href="https://github.com/katie-caruso" class="github"><i class="bx bxl-github"></i></a><a href="https://github.com/katie-caruso">katie-caruso</a></li>
             <li><a href="https://www.linkedin.com/in/carusokatie/" class="linkedin"><i class="bx bxl-linkedin"></i></a><a href="https://www.linkedin.com/in/carusokatie/">carusokatie</a></li>
-            <li><a href="katie-caruso.githhub.io" class="website"><span class="material-symbols-outlined" style="font-size: 0.73em;">account_circle</span></a><a href="mailto:caruso.k.e@gmail.com">caruso.k.e@gmail.com</a></li>
+            <li><a href="katie-caruso.githhub.io" class="website"><span class="material-symbols-outlined" style="font-size: 0.73em;">account_circle</span></a><a href="katie-caruso.githhub.io">katie-caruso.githhub.io</a></li>
         </ul>
     </header>
 
